scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -169,3 +169,5 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover;
 }
+
+body::-webkit-scrollbar {display:none;}
